# spi-echo

./: README.md
controller/: Cargo.toml
controller/src/: main.rs
peripheral/: Cargo.toml
peripheral/src/: main.rs
