[package]
authors = ["binotation"]
edition = "2021"
readme = "README.md"
name = "controller"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
# cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.6.0"
heapless = "0.8.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

[dependencies.stm32l4]
version = "0.15.1"
features = ["stm32l4x2"]

# this lets you use `cargo fix`!
[[bin]]
name = "controller"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
